# Legal_docs_Analyse_Agent

./: .env  README.md  app.py  output.txt  pyproject.toml
app/: agent.py  config.py  main.py  models.py  pdf_processing.py
